overflow fix

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -191,7 +191,7 @@ footer a,
 }
 
 .skills-content {
-  width: 25rem;
+  width: 23rem;
   
 }
 
